Package_Tools/glib/Package_Tools/include-C/glib-2.0/gobject/in_arbeit/gsignal.pp


{*
 * g_signal_handlers_unblock_by_func:
 * @instance: The instance to unblock handlers from.
 * @func: The C closure callback of the handlers (useless for non-C closures).
 * @data: The closure data of the handlers' closures.
 * 
 * Unblocks all handlers on an instance that match @func and @data.
 * 
 * Returns: The number of handlers that matched.
  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_unblock_by_func(instance,func,data : longint) : longint;

(* Const before type ignored *)
function g_signal_accumulator_true_handled(ihint:PGSignalInvocationHint; return_accu:PGValue; handler_return:PGValue; dummy:Tgpointer):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_signal_accumulator_first_wins(ihint:PGSignalInvocationHint; return_accu:PGValue; handler_return:PGValue; dummy:Tgpointer):Tgboolean;cdecl;external;
{< private > }
procedure g_signal_handlers_destroy(instance:Tgpointer);cdecl;external;
procedure _g_signals_destroy(itype:TGType);cdecl;external;
{$endif}
{ __G_SIGNAL_H__  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_connect(instance,detailed_signal,c_handler,data : longint) : longint;
begin
  g_signal_connect:=g_signal_connect_data(instance,detailed_signal,c_handler,data,NULL,TGConnectFlags(0));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_connect_after(instance,detailed_signal,c_handler,data : longint) : longint;
begin
  g_signal_connect_after:=g_signal_connect_data(instance,detailed_signal,c_handler,data,NULL,G_CONNECT_AFTER);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_connect_swapped(instance,detailed_signal,c_handler,data : longint) : longint;
begin
  g_signal_connect_swapped:=g_signal_connect_data(instance,detailed_signal,c_handler,data,NULL,G_CONNECT_SWAPPED);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_disconnect_by_func(instance,func,data : longint) : longint;
begin
  g_signal_handlers_disconnect_by_func:=g_signal_handlers_disconnect_matched(instance,TGSignalMatchType(G_SIGNAL_MATCH_FUNC or G_SIGNAL_MATCH_DATA),0,0,NULL,func,data);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_disconnect_by_data(instance,data : longint) : longint;
begin
  g_signal_handlers_disconnect_by_data:=g_signal_handlers_disconnect_matched(instance,G_SIGNAL_MATCH_DATA,0,0,NULL,NULL,data);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_block_by_func(instance,func,data : longint) : longint;
begin
  g_signal_handlers_block_by_func:=g_signal_handlers_block_matched(instance,TGSignalMatchType(G_SIGNAL_MATCH_FUNC or G_SIGNAL_MATCH_DATA),0,0,NULL,func,data);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_signal_handlers_unblock_by_func(instance,func,data : longint) : longint;
begin
  g_signal_handlers_unblock_by_func:=g_signal_handlers_unblock_matched(instance,TGSignalMatchType(G_SIGNAL_MATCH_FUNC or G_SIGNAL_MATCH_DATA),0,0,NULL,func,data);
end;


end.
